--- a/package.json
+++ b/package.json
@@ -17,9 +17,15 @@
   },
   "devDependencies": {
     "@types/react": "17.0.14",
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
     "babel-plugin-styled-components": "^1.13.2",
     "eslint": "7.31.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-next": "11.0.1",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "typescript": "4.3.5"
   }
 }
