--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@types/styled-components": "^5.1.11",
     "axios": "^0.21.1",
+    "leaflet": "^1.7.1",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-leaflet": "^3.2.0",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.7.4",
     "@types/react": "17.0.14",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "babel-plugin-styled-components": "^1.13.2",
